crates/cli/tests/snapshots/run@modules.nemo-2.snap
---
source: crates/cli/tests/lib.rs
info:
  program: deno
  args:
    - run
    - "--allow-read"
    - "../../dev/wasm-runner.ts"
    - tests/build/modules.wasm
  env:
    NO_COLOR: "1"
input_file: crates/cli/tests/run/modules.nemo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Uncaught (in promise) TypeError: main is not a function
console.log(main());
            ^
    at [FILE_PATH]
    at eventLoopTick (ext:core/01_core.js:174:7)
